--- a/index.html
+++ b/index.html
@@ -18,11 +18,24 @@
 </head>
 
 <body>
+    <div class="d-flex justify-content-center">
+        <h3 id="moneyHTML">Money</h3>
+    </div>
     <div class="container">
         <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">3</div>
+            <div class="col d-flex">
+                <div class="machine1"></div>
+            </div>
+            <div class="col">
+                <div class="machine2"></div>
+            </div>
+            <div class="col">
+                <div class="machine3"></div>
+            </div>
+        </div>
+        <div class="d-flex flex-column align-items-center justify-content-center mt-3">
+            <input type="text" id="input" placeholder="Enter Amount">
+            <div><button id="spinBtn" class="btn btn-primary mt-3">Spin Machine</button></div>
         </div>
     </div>
 </body>
